[project]
name = "open-controller"
version = "0.1.0"
description = "Open Controller is an open source signal controller"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.3.0",
    "jsmin>=3.0.1",
    "keyboard>=0.13.5",
    "libsumo>=1.27.0",
    "nats-py>=2.14.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2026.2",
    "six>=1.17.0",
    "stable-baselines3[extra]>=2.9.0",
    "traci>=1.27.0",
    "transitions>=0.9.3",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = [
    "tensorboard>=2.20.0",
]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "B",     # flake8-bugbear
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "Q",     # flake8-quotes
    "N",     # pep8-naming
    "SLF",   # flake8-self
    "COM",   # flake8-commas
    "I",     # isort (import sorting)
    "UP",    # pyupgrade (modern Python syntax)
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "S",     # flake8-bandit (security)
    "ASYNC", # flake8-async (async/await checks)
    "FURB",  # refurb (modernizing code)
    "RUF",   # Ruff-specific rules
    "RET",   # flake8-return
    "TID",   # flake8-tidy-imports
    "DOC",   # pydoclint (strict docstrings)
    "D",     # pydocstyle (strict docstrings)
    "PL",    # pylint
    "ERA",   # eradicate (commented out code)
#   "ANN",   # flake8-annotations (strict typing)
]

ignore = [
    "PLR0913", # Too many arguments in function definition
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in __init__
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "double"
